<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hijau"
        app:menu="@menu/menu" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hijau"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_bottom" />


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/gambarr" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:text="Pudding Mangga"
            android:textColor="@color/kuning"
            android:textStyle="bold"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            android:textColor="@android:color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/jisooo"
            tools:ignore="MissingClass" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/profile_image"
            android:text="Chef Laili"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_toRightOf="@id/profile_image"
            android:text="\@ResepLaili"
            android:textColor="@color/buabu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/profile_image"
            android:drawableStart="@drawable/ic_loc"
            android:text="Jakarta, Indonesia"
            android:textColor="@android:color/black" />

    </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/kuning" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_time"
            android:text="  30 menit"
            android:textColor="@color/buabu"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/ic_person"
            android:text=" 2 - 10 porsi"
            android:textColor="@color/buabu" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/kuning"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="Bahan bahan:"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/bahan_text"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/kuning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="Cara Membuat:"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text=" Memasak Pudding"
            android:drawableStart="@drawable/ic_one"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/gambar1" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/langkah1"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text=" Mencetak Pudding"
            android:drawableStart="@drawable/ic_two"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/gambar2" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/langkah2"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text=" Memberi topping"
            android:drawableStart="@drawable/ic_three"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/gambar3" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/langkah3"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </TableRow>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text=" Menghidangkan"
            android:drawableStart="@drawable/ic_44"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/gambar" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/langkah4"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </TableRow>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/header" />

        </FrameLayout>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/space"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>

  </ScrollView>

</RelativeLayout>